Fix header width not scaling on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,6 @@ button:active {
 }
 
 header {
-  min-width: 100%;
   min-height: 6rem;
   margin: 0;
   padding-bottom: 0;
